complete questions component,  adding toastr, spinner, fix to personality function, and update to unit test

--- a/personality-ui/src/app/components/questions/questions.component.html
+++ b/personality-ui/src/app/components/questions/questions.component.html
@@ -32,3 +32,5 @@
         <button (click)="submit()" class="btnSubmit"><span>Save & Continue</span></button>
     </div>
 </div>
+
+<ngx-spinner></ngx-spinner>
