--- a/personality-ui/src/app/components/questions/questions.component.scss
+++ b/personality-ui/src/app/components/questions/questions.component.scss
@@ -22,6 +22,28 @@
         }
     }
 
+    .btnModal {
+        position: absolute;
+        top: 68px;
+        right: 35px;
+        background: #3d59fa;
+        border-radius: 3px;
+        border-color: #3d59fa;
+        margin: 1rem;
+        height: 36px;
+        cursor: pointer;
+        span {
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+            text-align: center;
+            color: #ffffff;
+           
+        }
+    }
+
     .questions {
         .question {
             background: #ffffff;
@@ -116,6 +138,51 @@
                 color: #ffffff;
                
             }
+        }
+    }
+}
+
+.email {
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+
+    /* gray-700 */
+
+    color: #495057;
+}
+
+.email_input {
+    background: #ffffff;
+    border: 2px solid #aaaaaa;
+    box-sizing: border-box;
+    border-radius: 4px;
+    width: 100%;
+    height: 48px;
+    padding: 1rem;
+}
+
+.btnContainer {
+    text-align: center;
+    padding-top: 1rem;
+    .btnSubmit {
+        background: #3d59fa;
+        border-radius: 3px;
+        width: 155px;
+        height: 36px;
+        cursor: pointer;
+        span {
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+            text-align: center;
+            color: #ffffff;
+           
         }
     }
 }
